Comment section overflow fix.

--- a/css/profile.scss
+++ b/css/profile.scss
@@ -47,7 +47,7 @@
           }
         }
         .content{
-          overflow:visible;
+          overflow:hidden;
         }
       }
     }
